Fix issues with Bulma's columns margin on mobile.

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -12,6 +12,10 @@ body
 a
     color: $primary-color
 
+.columns
+    margin-left: 0rem
+    margin-right: 0rem
+
 a:hover
     color: $primary-color-darker
     text-decoration: underline
